<resources>
    <string name="app_name">Basketball Score Keeper</string>
    <string name="logo_score">Score</string>
    <string name="logo_keeper">Keeper</string>
    <string name="logo_image_description">Basketball</string>
    <string name="team1_name_hint">Team #1 Name</string>
    <string name="team2_name_hint">Team #2 Name</string>
    <string name="start_button_text">Start</string>
    <string name="team1_name_error_msg">Please fill in Team #1 name</string>
    <string name="team2_name_error_msg">Please fill in Team #2 name</string>
    <string name="btn_3points">+3 Points</string>
    <string name="btn_2points">+2 Points</string>
    <string name="btn_1point">Free Throw</string>
</resources>
