<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.basketballscorekeeper.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/normal_padding_margin_16dp">
        <!-- Logo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_padding_margin_16dp"
            android:orientation="horizontal">
            <!-- Logo Text -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".50"
                android:orientation="vertical">
                <TextView
                    style="@style/logo_textStyle"
                    android:id="@+id/logoText"
                    android:gravity="bottom"
                    android:text="@string/logo_score" />
                <TextView
                    style="@style/logo_textStyle"
                    android:id="@+id/logoText1"
                    android:text="@string/logo_keeper" />
            </LinearLayout>
            <!-- Logo Image -->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:contentDescription="@string/logo_image_description"
                android:src="@drawable/ball_resized" />
        </LinearLayout>
        <!-- Team #1 name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_team1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_padding_margin_16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_team1"
                style="@style/team_names_text_style"
                android:hint="@string/team1_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Team #2 name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_team2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_padding_margin_16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_team2"
                style="@style/team_names_text_style"
                android:hint="@string/team2_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Start Button -->
        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding_margin_16dp"
            android:background="@color/colorAccent"
            android:padding="@dimen/normal_padding_margin_16dp"
            android:text="@string/start_button_text"
            android:textColor="#FFF"
            android:textSize="@dimen/start_button_text_size"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
